--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav id="mainNav" class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top py-3">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img id="navProfileImg" src="./aboutImg/profile.jpg" alt="Profile" class="rounded-circle me-2 nav-img" style="width:40px; height:40px;">
+                <img id="navProfileImg" src="./aboutImg/profile.jpg" alt="Profile" class="rounded-circle me-2 nav-img object-fit" style="width:40px; height:40px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
