--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <!-- Footer -->
     <footer class="py-4 text-center bg-dark text-secondary">
         <div class="container">
-            &copy; 2024 Fazal. All rights reserved.
+            &copy; 2025 Fazalul Ameen. All rights reserved.
         </div>
     </footer>
 
